release 1.3 (05/06-2010)
- Fixed issue 509
  https://jersey.dev.java.net/issues/show_bug.cgi?id=509
  The stack trace is no longer included as the response entity for an
  unmapped WebApplicationException with a status code of 500 and no response
  entity.
- Fixed issue 521
  https://jersey.dev.java.net/issues/show_bug.cgi?id=520
  Support matching when quality of source, qs, values are less than 1.
- Fixed issue 520
  https://jersey.dev.java.net/issues/show_bug.cgi?id=520
  When Guice support is configured enable Guice injection of resource
  or provider classes that have fields or methods annotated with @Inject
  but have no constructor annotated with @Inject. In this case Jersey
  instiaties and manages and lets Guice inject.
- Fixed issue 449
  https://jersey.dev.java.net/issues/show_bug.cgi?id=449
  When a message body reader or writer cannot be found for a media type
  and Java type log all readers/writers that are compatible with that
  media type.

release 1.2 (05-2010)
- Fixed issue 457
  https://jersey.dev.java.net/issues/show_bug.cgi?id=457
  Jersey WAR project cannot be deployed on OSGI platform
- Fixed issue 275
  https://jersey.dev.java.net/issues/show_bug.cgi?id=275
  Jersey-core, jersey-server, jersey-client and jersey-json modules 
  now (from 1.2 verison on) contain OSGi headers and use ServiceMix based
  implementation to work in OSGi environment.
  2 examples were added to show how to build a Jersey based OSGi web application
  using OSGi Http-Service and OSGi WAR deployment. 
  Known limitation: the package name resource configuration can not be used in the OSGi runtime
  and needs to be replaced by the class name based mechanism.
  This will be addressed in future development. Also other Jersey modules 
  are to be OSGified in the future releases.
- Fixed issue 516
  https://jersey.dev.java.net/issues/show_bug.cgi?id=516
  Changed resolving algorithm for finding a CDI Bean from a Class such
  that inheritence hierarchies are supported.